--- a/styles.css
+++ b/styles.css
@@ -4,9 +4,25 @@ body{
     padding: 0;
     box-sizing: border-box;
 }
-h1{
+h1, h2, h3, h4, h5, h6, p{ 
     margin: 0;
+    font-family: "Dancing Script", system-ui;
+    text-transform: capitalize;
 }
+a.btn{
+    transition: all 0.3s;
+    background-color: #000;
+    color: #fff;
+    border: 0;
+    border-radius: 0;
+    padding: 15px 30px;
+    text-decoration: none;
+}
+a:hover{
+    background-color: #333;
+    color: #fff;
+}
+
 .hero-shot{
     background-image:url("https://via.placeholder.com/1200x720");
     background-position: center;
@@ -61,9 +77,15 @@ h1{
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
+    flex-direction: column;
     gap: 10px;
     padding: 50px 0;
     background-color: #f8f9fa;
+    
+}
+.gallery h2 {
+    text-align: center;
+    margin-bottom: 20px;
 }
 
 .gallery a {
@@ -71,6 +93,7 @@ h1{
     width: 320px;
     height: 250px;
     overflow: hidden;
+    margin-bottom: 10px;
 }
 
 .gallery img {
@@ -78,3 +101,72 @@ h1{
     height: 100%;
     object-fit: cover;
 }
+.gallery > div {
+    display: flex;
+    flex-wrap: wrap;
+       justify-content: space-around;;
+}
+
+
+.gift{
+    display: flex;
+    flex-wrap: wrap;
+    padding: 40px 0;
+}
+
+.flip-card {
+    background-color: transparent;
+    width: 300px;
+    height: 200px;
+    perspective: 1000px;
+    margin: 20px auto;
+  }
+  
+  .flip-card-inner {
+    position: relative;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    transition: transform 0.6s;
+    transform-style: preserve-3d;
+  }
+  
+  .flip-card:hover .flip-card-inner {
+    transform: rotateY(180deg);
+  }
+  
+  .flip-card-front, .flip-card-back {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    backface-visibility: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+  }
+  
+  .flip-card-front {
+    background-color: #bbb;
+    color: black;
+  }
+  
+  .flip-card-back {
+    background-color: #2980b9;
+    color: white;
+    transform: rotateY(180deg);
+  }
+
+  .dress-code{
+    text-align: center;
+    padding: 30px 0;
+  }
+
+  .dress-code h2{
+    font-size: 50px;
+  }
+
+  .dress-code p{
+    font-size: 20px;
+    margin-bottom: 10px;
+  }
